Fix popover content aligning

--- a/src/components/ElectronMenu/AccountMenu/_AccountMenu.scss
+++ b/src/components/ElectronMenu/AccountMenu/_AccountMenu.scss
@@ -32,19 +32,17 @@
 
   &-content {
     min-width: 198px;
+    color: var(--color);
     height: fit-content;
     background-color: var(--bgColor2);
-    color: var(--color);
-    box-shadow: 0 0 0 1px var(--borderColor);
+    border: 1px solid var(--borderColor);
 
     .bp3-menu {
       padding: 0;
 
-
       &-item {
-        height: 16px;
-        line-height: 40px;
         padding: 0 14px;
+        font-size: 13px;
         border-bottom: 1px solid var(--borderColor);
 
         svg {
@@ -53,9 +51,9 @@
         }
 
         &.bp3-active {
+          color: var(--activeColor);
           background-color: var(--menuActive);
           border-right: 6px solid var(--menuActiveBorder);
-          color: var(--activeColor);
 
           svg path {
             fill: var(--activeColor);
